# urban-dic-bot

./: .env.example  Cargo.toml  README.md
src/: commands.rs  main.rs  urban_dict.rs
