[package]
name = "urban-dic-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.19",  features = ["macros","rt-multi-thread","time"]}
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "model", "cache",
          "rustls_backend"]}
lazy_static = "1.3"
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
regex = "1.5"
urlencoding = "2.1"
dotenv = "0.15"